[package]
name = "redb-bincode"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
redb = "2.0.0"
bincode = "2.0.0-rc.3"
thiserror = "1.0.58"

[dev-dependencies]
anyhow = "1.0.81"

[profile.dev]
debug = "line-tables-only"
lto = "off"

[profile.ci]
inherits = "dev"
incremental = false

[profile.release]
debug = "line-tables-only"
lto = "fat"
codegen-units = 1

# Workaround: https://github.com/rust-lang/cargo/issues/12457 which causes
#             https://github.com/ipetkov/crane/issues/370
[profile.dev.build-override]
debug = false
[profile.ci.build-override]
debug = false
[profile.release.build-override]
debug = false
